# blog_code

./: .gitignore  README.md
.github/workflows/: c-cpp.yml
CMake/cmake_compiler_flags/: README.md
CMake/cmake_compiler_flags/Beispiel_1/: CMakeLists.txt  main.cpp
CMake/cmake_compiler_flags/Beispiel_2/: CMakeLists.txt  main.cpp
CMake/cmake_compiler_flags/Beispiel_3/: CMakeLists.txt  main.cpp
CMake/cmake_cpp_standard/: README.md
CMake/cmake_cpp_standard/Beispiel_1/: CMakeLists.txt  main.cpp
CMake/cmake_cpp_standard/Beispiel_2/: CMakeLists.txt
CMake/cmake_cpp_standard/Beispiel_2/libs/math/: CMakeLists.txt
CMake/cmake_cpp_standard/Beispiel_3/: CMakeLists.txt
CMake/cmake_cpp_standard/Beispiel_4/: CMakeLists.txt
CMake/cmake_crashkurs/: CMakeLists.txt  README.md
CMake/cmake_libraries/: README.md
CMake/cmake_libraries/Beispiel_1/: CMakeLists.txt
CMake/cmake_libraries/Beispiel_1/src/: main.cpp
CMake/cmake_libraries/Beispiel_1/src/mathe/: quadrat.cpp  rechteck.cpp
CMake/cmake_libraries/Beispiel_2/: main.cpp
CMake/cmake_libraries/Beispiel_2/Shared/: CMakeLists.txt
CMake/cmake_libraries/Beispiel_2/Static/: CMakeLists.txt
CMake/cmake_libraries/Beispiel_3/: CMakeLists.txt
CMake/cmake_libraries/Beispiel_4/: CMakeLists.txt
CMake/cmake_libraries/Beispiel_5/: CMakeLists.txt
CMake/cmake_libraries/Beispiel_5/libs/mathe/: libmathe_shared.dylib  mathe_shared.lib
CMake/cmake_libraries/Beispiel_6/: CMakeLists.txt
CMake/cmake_libraries/Beispiel_6/src/mathe/: quadrat.h  rechteck.h
CMake/cmake_variables/: README.md
CMake/cmake_variables/Beispiel_1/: CMakeLists.txt
CMake/cmake_variables/Beispiel_2/: CMakeLists.txt
CMake/cmake_variables/Beispiel_3/: CMakeLists.txt
CMake/cmake_variables/Beispiel_3/subfolder/: CMakeLists.txt
CMake/cmake_variables/Beispiel_4/: CMakeLists.txt
CMake/cmake_variables/Beispiel_5/: CMakeLists.txt
CMake/cmake_variables/Beispiel_6/: CMakeLists.txt
